Config show messange of API, Create House View Models for Home Page and Setting Page

--- a/HouseManagementSystemAPI/Properties/launchSettings.json
+++ b/HouseManagementSystemAPI/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "HouseManagementSystemAPI": {
+    "HMSAPI": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
