--- a/HouseManagementSystemAPI/appsettings.Development.json
+++ b/HouseManagementSystemAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Connection": "Server=localhost,1433;Initial Catalog=HMSDB;User ID=sa;Password=123456;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
+
 }
