--- a/HouseManagementSystemData/HMS.Data.csproj
+++ b/HouseManagementSystemData/HMS.Data.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>HMS.Data</AssemblyName>
+    <RootNamespace>HMS.Data</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
