--- a/HouseManagementSystemAPI/appsettings.Development.json
+++ b/HouseManagementSystemAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Connection": "Server=localhost,1433;Initial Catalog=HMSDB;User ID=sa;Password=123456;Trusted_Connection=True;"
+    "Connection": "Server=localhost,1433;Initial Catalog=HMSDB;User ID=sa;Password=123456;Trusted_Connection=True;",
+    "AuthenConnection": "Server=localhost,1433;Initial Catalog=AuthenDB;User ID=sa;Password=123456;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,6 +9,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:61955",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   }
-
 }
