Add firebase notifcation Add send request with custom token

--- a/HouseManagementSystemData/HMS.Data.csproj
+++ b/HouseManagementSystemData/HMS.Data.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HMS.Authen\HMS.Authen.csproj" />
+    <ProjectReference Include="..\HMS.FirebaseNotification\HMS.FirebaseNotification.csproj" />
   </ItemGroup>
 
 </Project>
