Add TrackServer Config LoginByExternalAsync: get picture from Google

--- a/HouseManagementSystemAPI/HMSAPI.csproj
+++ b/HouseManagementSystemAPI/HMSAPI.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HMS.Authen\HMS.Authen.csproj" />
+    <ProjectReference Include="..\HMS.FirebaseServices\HMS.FirebaseServices.csproj" />
     <ProjectReference Include="..\HouseManagementSystemData\HMS.Data.csproj" />
   </ItemGroup>
 
