--- a/HouseManagementSystemData/HMS.Data.csproj
+++ b/HouseManagementSystemData/HMS.Data.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="AutoMapperProfile\MappingProfile.cs~RF4d3021.TMP" />
     <None Remove="AutoMapperProfile\MappingProfile.cs~RFb55eaa.TMP" />
+    <None Remove="DependencyInjection\DependencyInjectionResolverGen.cs~RFedc7b44.TMP" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,7 +37,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HMS.Authen\HMS.Authen.csproj" />
-    <ProjectReference Include="..\HMS.FirebaseNotification\HMS.FirebaseNotification.csproj" />
+    <ProjectReference Include="..\HMS.FirebaseServices\HMS.FirebaseServices.csproj" />
   </ItemGroup>
 
 </Project>
