Add bussiness to CreateContract and DeleteContract. Load Contract with houseName, ownerName, roomName

--- a/HouseManagementSystemAPI/appsettings.Development.json
+++ b/HouseManagementSystemAPI/appsettings.Development.json
@@ -15,5 +15,9 @@
     "ValidIssuer": "http://localhost:61955",
     "ExpireInMonths": "1",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
+
+  "Firebase": {
+    "WebAPIkey": "AIzaSyBOUnY4MomlWzp-8pMw2QNStK-k6Q27FB4"
   }
 }
